--- a/static/gallery.html
+++ b/static/gallery.html
@@ -16,7 +16,7 @@
             }
 
             .topnav {
-              background-color: #0c2419;
+              background-color: black;
                 overflow: hidden;
             }
 
