--- a/static/contact.html
+++ b/static/contact.html
@@ -2,122 +2,73 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="shortcut icon" href="static/favicon.ico">
+    <link rel="shortcut icon" href="/static/img/favicon.ico">
+    <link rel="stylesheet" href="/static/css/bootstrap.css">
     <title>Contact</title>
-
-        <style>
-            body{
-                background-color: #f2f2f2;
-                font-family: Calibri;
-                margin: 0;
-                padding: 0;
-                border: 0;
-                overflow: hidden;
-            }
-
-            .topnav {
-              background-color: black;
-                overflow: hidden;
-            }
-
-            .topnav a {
-              float: left;
-              color: #f2f2f2;
-              text-align: center;
-              padding: 14px 16px;
-              text-decoration: none;
-              font-size: 17px;
-            }
-
-            .topnav a:hover {
-              background-color: #f7e6e7;
-              color: black;
-            }
-
-            .topnav a.active {
-              background-color: #d92935;
-              color: white;
-            }
-
-            footer {
-                text-align: center;
-                padding: 1px;
-                border-bottom: 1px;
-                background-color: #d92935;
-                color: white;
-                width: 100%;
-                height: 70px;
-                bottom: 0;
-                position: absolute;
-
-            }
-
-            a:link {
-                text-decoration: none;
-                color: white;
-            }
-
-            a:visited {
-              text-decoration: none;
-                color: white;
-            }
-
-            a:hover {
-              text-decoration: underline;
-                color: white;
-            }
-
-            a:active {
-              text-decoration: underline;
-                color: white;
-            }
-
-            .main {
-                margin-left: 15px;
-                margin-right: 15px;
-            }
-
-            .button {
-                background-color: #d92935;
-                font-size: 24px;
-                border: none;
-                color: white;
-                padding: 15px 32px;
-                text-align: center;
-                text-decoration: none;
-                display: inline-block;
-                border-radius: 6px;
-                transition-duration: 0.4s;
-            }
-
-            .button:hover {
-                background-color: #f7e6e70;
-                color: white;
-            }
-
-        </style>
 </head>
 <body>
+<header>
+    <nav class="navbar navbar-expand-lg navbar-light bg-dark">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="/">
+                <img src="/static/img/favicon.ico" alt="">
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="text-white nav-link active" aria-current="page" href="/">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="text-white nav-link" href="/aboutme">About me</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="text-white nav-link" href="/gallery">Gallery</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="text-white nav-link" href="/contact">Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+</header>
+<main>
+    <div class="container-fluid mt-3">
 
-<div class="topnav">
-  <a class="active" href="/">Home</a>
-  <a href="/aboutme">About me</a>
-    <a href="/gallery">Gallery</a>
-    <a href="/contact">Contact</a>
-</div>
+        <h1 class="mb-3 m-lg-5">Contact with me</h1>
 
-<div class="main">
-<h2>Contact with me by email:</h2>
-<a class="button" href = "mailto: email@address.com">Send Email</a>
-</div>
+        <form action="/form" method="POST">
+            <div class="col-5 m-lg-5 form-group border p-5 rounded">
+                <div class="mb-3">
+                    <label for="email" class="form-label">Email address</label>
+                    <input type="email" class="form-control" id="email" aria-describedby="emailHelp">
+                    <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+                </div>
+                <div class="mb-3">
+                    <label for="description">Description</label>
+                    <textarea class="form-control" id="description" rows="3"></textarea>
+                </div>
+                <div class="mb-3 form-check">
+                    <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                    <label class="form-check-label" for="exampleCheck1">Check me out</label>
+                </div>
+                <button type="submit" class="btn btn-primary bg-success">Send it</button>
+            </div>
+        </form>
 
-
-
-
-<footer>
-  <p>Author: Kasjan R.<br>
-  <a href="mailto:email@address.com">email@address.com</a></p>
-</footer>
-
+        <footer class="bg-dark text-center text-lg-start fixed-bottom">
+            <!-- Copyright -->
+            <div class="text-center p-3 text-white">
+                © 2021 Copyright:
+                <a class="text-white" href="https://kasjan.azurewebsites.net/">Kasjan Różycki</a>
+            </div>
+            <!-- Copyright -->
+        </footer>
+    </div>
+</main>
 </body>
 </html>
