--- a/static/gallery.html
+++ b/static/gallery.html
@@ -2,152 +2,93 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="shortcut icon" href="static/favicon.ico">
+    <link rel="shortcut icon" href="/static/img/favicon.ico">
+    <link rel="stylesheet" href="/static/css/bootstrap.css">
     <title>Gallery</title>
-
-        <style>
-            body{
-                background-color: #f2f2f2;
-                font-family: Calibri;
-                margin: 0;
-                padding: 0;
-                border: 0;
-                overflow: hidden;
-            }
-
-            .topnav {
-              background-color: black;
-                overflow: hidden;
-            }
-
-            .topnav a {
-              float: left;
-              color: #f2f2f2;
-              text-align: center;
-              padding: 14px 16px;
-              text-decoration: none;
-              font-size: 17px;
-            }
-
-            .topnav a:hover {
-              background-color: #f7e6e7;
-              color: black;
-            }
-
-            .topnav a.active {
-              background-color: #d92935;
-              color: white;
-            }
-
-            footer {
-                text-align: center;
-                padding: 1px;
-                border-bottom: 1px;
-                background-color: #d92935;
-                color: white;
-                width: 100%;
-                height: 70px;
-                bottom: 0;
-                position: absolute;
-
-            }
-
-            a:link {
-                text-decoration: none;
-                color: white;
-            }
-
-            a:visited {
-              text-decoration: none;
-                color: white;
-            }
-
-            a:hover {
-              text-decoration: underline;
-                color: white;
-            }
-
-            a:active {
-              text-decoration: underline;
-                color: white;
-            }
-
-            .main {
-                margin-left: 15px;
-                margin-right: 15px;
-            }
-
-            div.gallery {
-              margin: 5px;
-              border: 1px solid #ccc;
-              float: left;
-              width: 400px;
-            }
-
-            div.gallery:hover {
-              border: 1px solid #777;
-            }
-
-            div.gallery img {
-              width: 100%;
-              height: auto;
-            }
-
-            div.desc {
-              padding: 15px;
-              text-align: center;
-            }
-
-
-        </style>
 </head>
 <body>
+<header>
+<nav class="navbar navbar-expand-lg navbar-light bg-dark">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="/">
+            <img src="/static/img/favicon.ico" alt="">
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="text-white nav-link active" aria-current="page" href="/">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="text-white nav-link" href="/aboutme">About me</a>
+                </li>
+                <li class="nav-item">
+                    <a class="text-white nav-link" href="/gallery">Gallery</a>
+                </li>
+                <li class="nav-item">
+                    <a class="text-white nav-link" href="/contact">Contact</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
+</header>
+<main>
+<div class="container-fluid mt-3 mb-3">
 
-<div class="topnav">
-  <a class="active" href="/">Home</a>
-  <a href="/aboutme">About me</a>
-    <a href="/gallery">Gallery</a>
-    <a href="/contact">Contact</a>
+    <div class="row row-cols-1 row-cols-md-2 g-4">
+  <div class="col">
+    <div class="card">
+      <img src="/static/img/1.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Photo #1</h5>
+        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+      </div>
+    </div>
+  </div>
+  <div class="col">
+    <div class="card">
+      <img src="/static/img/2.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Photo #2</h5>
+        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+      </div>
+    </div>
+  </div>
+  <div class="col">
+    <div class="card">
+      <img src="/static/img/3.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Photo #3</h5>
+        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+      </div>
+    </div>
+  </div>
+  <div class="col">
+    <div class="card">
+      <img src="/static/img/4.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Photo #4</h5>
+        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+      </div>
+    </div>
+  </div>
 </div>
 
-<div class="main">
-<h1>This is my gallery</h1>
 
-<div class="gallery">
-    <a target="_blank" href="static/img/1.jpg">
-    <img src="static/img/1.jpg" width="800" height="600">
-  </a>
-  <div class="desc">Photo #1</div>
-</div>
+    </div>
 
-<div class="gallery">
-    <a target="_blank" href="static/img/2.jpg">
-    <img src="static/img/2.jpg" width="800" height="600">
-  </a>
-  <div class="desc">Photo #2</div>
-</div>
-
-<div class="gallery">
-    <a target="_blank" href="static/img/3.jpg">
-    <img src="static/img/3.jpg" width="800" height="600">
-  </a>
-  <div class="desc">Photo #3</div>
-</div>
-
-<div class="gallery">
-    <a target="_blank" href="static/img/4.jpg">
-    <img src="static/img/4.jpg" width="800" height="600">
-  </a>
-  <div class="desc">Photo #4</div>
-</div>
-
-</div>
-
-
-<footer>
-  <p>Author: Kasjan R.<br>
-  <a href="mailto:email@address.com">email@address.com</a></p>
-</footer>
-
+    <footer class="bg-dark text-center text-lg-start float-bottom">
+        <!-- Copyright -->
+        <div class="text-center p-3 text-white">
+            © 2021 Copyright:
+            <a class="text-white" href="https://kasjan.azurewebsites.net/">Kasjan Różycki</a>
+        </div>
+        <!-- Copyright -->
+    </footer>
+</main>
 </body>
 </html>
